# Image_Composition_OpenMP

./: CMakeLists.txt  README.md  main.cpp
Relazione/: Relazione_Parallel_Image_Composition.tex
